force-app/main/default/objects/LocalOportunidade__c/LocalOportunidade__c.object-meta.xml
<CustomObject>
    <label>Local do Produto Oportunidade</label>
    <nameField>
        <displayFormat>LOOP-{0000000}</displayFormat>
        <label>Local da Oportunidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locais do Produto Oportunidade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>