force-app/main/default/objects/LocalOportunidade__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipName>LocaisProdutoOportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>