force-app/main/default/objects/LocalOportunidade__c/fields/ProdutoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>ProdutoOportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto de oportunidade</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>LocaisProdutoOportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>