force-app/main/default/objects/LocalOportunidade__c/fields/Sequencia__c.field-meta.xml
<CustomField>
    <fullName>Sequencia__c</fullName>
    <label>Sequencia</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>